          compatibility
        - update compiler warnings configuration for all build platforms
  * Add debian/watch file.
  * Removed patches applied upstream
        - fix-werror.patch
        - gcc-4.7.patch
        - sipe-purple-2.8.0.patch
        - update-glib-2.32.patch
  * Add libnice-dev and libgstreamer0.10-dev to Build-Depends.
  * Bump Standards-Version to 3.9.3.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 11 May 2012 14:18:15 +0200

pidgin-sipe (1.11.2-1.2) unstable; urgency=low

  * Non-maintainer upload.
  * update-glib-2.32.patch: Update to use glib 2.32. Replace g_strcasecmp and 
    g_strncasecmp with g_utf8_casefold and g_utf8_collate.
    (Closes: #665672)
  * gcc-4.7.patch: Fix -Werror=maybe-uninitialized to build with gcc-4.7.
    (Closes: #667323)

 -- Mònica Ramírez Arceda <monica@debian.org>  Thu, 19 Apr 2012 16:46:23 +0200

pidgin-sipe (1.11.2-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix "FTBFS with pdigin 2.8.0-1 in unstable": 
    add patch sipe-purple-2.8.0.patch from archlinux, forwarded to the BTS 
    by Islam Amer.
    (Closes: #630638)
  * Fix "ftbfs with gcc-4.6 -Werror":
    add patch fix-werror.patch from peter green.
    (Closes: #625404) (LP: #832881)

 -- gregor herrmann <gregoa@debian.org>  Fri, 23 Dec 2011 15:31:52 +0100

pidgin-sipe (1.11.2-1) unstable; urgency=low

  * New upstream version
        - Feature #2945346: Lotus Notes/Domino Calendar integration:
          * Sipe can now retrieve calendar data (Meeting schedule/subject/
            location) from a web-enabled Lotus Domino server and publish it to
            OCS2007/LCS2005 as availability information.
          * Example: "Calendar: Currently Busy. Free at 11:30".
          * Team members (contacts with access level Team) will be able to see
            information about our current meeting (subject & location) (OCS2007)
          * First calendar update is scheduled 1 minute after connect,