@@ -62,6 +62,7 @@ pidgin-sipe (1.13.1-0.1) unstable; urgency=low
         - update-glib-2.32.patch
   * Add libnice-dev and libgstreamer0.10-dev to Build-Depends.
   * Bump Standards-Version to 3.9.3.
+  * Fix lintian warning debian-rules-missing-recommended-target.
 
  -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 11 May 2012 14:18:15 +0200
 
